--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <h2 id="variablesTitle" style="display: none">CSS Variables</h2>
       <ul id="variablesList" class="variable-list"></ul>
 
-      <div class="btns-bg-div">
+      <!-- <div class="btns-bg-div">
         <button class="btn-prime-div">submit</button>
         <button class="btn-second-div">submit</button>
-      </div>
+      </div> -->
       
       <div id="presetsSection" style="display: none">
         <h2>Color Presets</h2>
