--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
       <h2 id="variablesTitle" style="display: none">CSS Variables</h2>
       <ul id="variablesList" class="variable-list"></ul>
 
-      <!-- <div class="btns-bg-div">
-        <button class="btn-prime-div">submit</button>
-        <button class="btn-second-div">submit</button>
+      <!-- <div class="btn-wrapper">
+        <button class="btn-primary">submit</button>
+        <button class="btn-secondary">submit</button>
+        <button class="btn-outline">submit</button>
+        <button class="btn-custom">submit</button>
+        <button type="submit" class="btn-yellow">submit</button>
       </div> -->
       
       <div id="presetsSection" style="display: none">
