--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
       <h2 id="variablesTitle" style="display: none">CSS Variables</h2>
       <ul id="variablesList" class="variable-list"></ul>
 
-      <!-- <div class="btn-wrapper">
-        <button class="btn-primary">submit</button>
-        <button class="btn-secondary">submit</button>
-        <button class="btn-outline">submit</button>
-        <button class="btn-custom">submit</button>
-        <button type="submit" class="btn-yellow">submit</button>
-      </div> -->
-      
+      <div class="btn-wrapper">
+        <button class="btn-linear-gradient">btn-linear-gradient</button>
+        <button class="btn-primary">btn-primary</button>
+        <button class="btn-secondary">btn-secondary</button>
+        <button class="btn-outline">btn-outline</button>
+        <button class="btn-custom">btn-custom</button>
+        <button type="submit" class="btn-yellow">btn-yellow</button>
+      </div>
+
       <div id="presetsSection" style="display: none">
         <h2>Color Presets</h2>
         <div id="presetsCards"></div>
