--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
       <div class="btn-wrapper">
         <button class="btn-linear-gradient">btn-linear-gradient</button>
-        <button class="btn-primary">btn-primary</button>
-        <button class="btn-secondary">btn-secondary</button>
-        <button class="btn-outline">btn-outline</button>
-        <button class="btn-custom">btn-custom</button>
+        <button class="btn-primary radius-sm">btn-primary</button>
+        <button class="btn-secondary radius-md">btn-secondary</button>
+        <button class="btn-outline radius-lg">btn-outline</button>
+        <button class="btn-custom radius-pill">btn-custom</button>
         <button type="submit" class="btn-yellow">btn-yellow</button>
       </div>
 
