--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <ul id="variablesList" class="variable-list"></ul>
 
       <div class="btn-wrapper">
-        <button class="btn-linear-gradient">btn-linear-gradient</button>
-        <button class="btn-primary radius-sm">btn-primary</button>
-        <button class="btn-secondary radius-md">btn-secondary</button>
-        <button class="btn-outline radius-lg">btn-outline</button>
-        <button class="btn-custom radius-pill">btn-custom</button>
-        <button type="submit" class="btn-yellow">btn-yellow</button>
+        <button class="btn btn-linear-gradient">btn-linear-gradient</button>
+        <button class="btn btn-primary radius-sm">btn-primary</button>
+        <button class="btn btn-secondary radius-md">btn-secondary</button>
+        <button class="btn btn-outline radius-lg">btn-outline</button>
+        <button class="btn btn-custom radius-pill">btn-custom</button>
+        <button type="submit" class="btn btn-yellow">btn-yellow</button>
       </div>
 
       <div id="presetsSection" style="display: none">
